--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <a href="chapter1.html">Chapter 1</a>
       <a href="chapter2.html">Chapter 2</a>
       <a href="chapter3.html">Chapter 3</a>
-      <a href="#">Chapter 4</a>
-      <a href="#">Chapter 5</a>
+      <a href="chapter4.html">Chapter 4</a>
+      <a href="chapter5.html">Chapter 5</a>
       <a href="chapter6.html">Chapter 6</a>
       <a href="chapter7.html">Chapter 7</a>
       <a href="chapter8.html">Chapter 8</a>
     </div>
   </div>
-  <a href="#">QUIZ</a>
+  <a href="quiz.html">QUIZ</a>
   <a href="about.html">ABOUT US</a>
 </nav>
 
@@ -98,4 +98,5 @@
 
 </body>
 </html>
+
 
